syntax = "proto3";

package user;

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc AddUser(User) returns (UserResponse);
    rpc GetUser(UserRequest) returns (User);
    rpc ListUsers(EmptyRequest) returns (UserList);
}

message UserResponse {
    int32 id = 1;  // User ID response for AddUser.
}

message UserRequest {
    int32 id = 1;  // User ID request for GetUser.
}

message UserList {
    repeated User users = 1;  // List of users.
}

message EmptyRequest {}
